--- a/Seminar-LinkedData/document.tex
+++ b/Seminar-LinkedData/document.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\title{Working Title}
+\title{Semantic Enrichment for OWL Knowledge Bases}
 %\subtitle{[Extended Abstract]
 
 \numberofauthors{1} 
