--- a/Seminar-LinkedData/src/conclusion.tex
+++ b/Seminar-LinkedData/src/conclusion.tex
@@ -1,3 +1,28 @@
 \section{Conclusions}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+Feugiat velit ut eros tempus hendrerit.
+Curabitur pretium placerat turpis eget sollicitudin.
+Quisque lacinia commodo enim et condimentum.
+Sed pulvinar, enim non porta lacinia, purus arcu placerat ante, eget scelerisque ipsum dolor vel ex.
+Etiam interdum erat eget ultricies euismod.
+Pellentesque ultrices lectus sapien, sit amet rutrum urna cursus quis.
+Aenean interdum luctus nisl, id finibus urna.
+Ut et lobortis enim.
+Phasellus pharetra elit enim, nec scelerisque ipsum vestibulum at.
+Morbi bibendum odio elementum, tristique orci eget, ultricies justo.
+Morbi pretium consectetur quam, a malesuada nunc vehicula in.
+Mauris a maximus lacus.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis luctus erat eu ex sagittis, nec cursus turpis sollicitudin. Nunc a tempor ligula. Nulla nec ante ut leo aliquam molestie vel a sapien. Quisque a imperdiet dui. Sed vehicula ipsum ornare velit ultrices, in accumsan odio placerat. Vivamus dignissim tincidunt egestas. Ut vel aliquam nisi. Vivamus vulputate justo mauris, eu interdum nunc gravida vel. Nulla suscipit odio fermentum erat efficitur dignissim. Nullam faucibus eros vel tellus aliquam luctus. Nullam quis orci eros. Aenean facilisis elit a velit posuere rutrum. 
+
+Curabitur iaculis arcu velit, at fermentum odio cursus id.
+Mauris laoreet porta augue et tempus.
+Vestibulum mollis tristique risus.
+Mauris mollis, massa sed sagittis mollis, nibh eros rhoncus nulla, eu posuere metus dui vel risus.
+Nunc elementum erat eget sapien condimentum, sed ultrices orci finibus.
+Donec justo metus, mollis egestas iaculis a, luctus eget augue.
+Suspendisse quis venenatis elit, vitae venenatis tortor.
+Suspendisse quis enim lacus.
+Curabitur a posuere ex, vitae mattis leo.
+Integer id convallis lacus, sit amet tristique nisi.
+Praesent malesuada vehicula pulvinar.
+Donec ullamcorper convallis elit pharetra sodales.
