--- a/Seminar-LinkedData/src/abstract.tex
+++ b/Seminar-LinkedData/src/abstract.tex
@@ -1,4 +1,24 @@
 \begin{abstract}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis luctus erat eu ex sagittis, nec cursus turpis sollicitudin. Nunc a tempor ligula. Nulla nec ante ut leo aliquam molestie vel a sapien. Quisque a imperdiet dui. Sed vehicula ipsum ornare velit ultrices, in accumsan odio placerat. Vivamus dignissim tincidunt egestas. Ut vel aliquam nisi. Vivamus vulputate justo mauris, eu interdum nunc gravida vel. Nulla suscipit odio fermentum erat efficitur dignissim. Nullam faucibus eros vel tellus aliquam luctus. Nullam quis orci eros. Aenean facilisis elit a velit posuere rutrum. 
+The Semantic Web is still growing and the availability of large knowledge graphs
+increased over the past years. In spite of the growing number of knowlege bases
+there exist very few with a sophisticated schema. Often they only consist of a
+collection of facts with no consistant structure. Other knowlege bases contain
+only schema information without instances of the defined schemata.
+\\
+But only the combination of both of these extremes, sophisticated schema and
+available instance data can enable powerful reasoning, easier checking for
+consistency and improved queryability. 
+\\
+This article show two methods for the semantic enrichment of large OWL knowlege
+bases. The first method focuses at finding and creating class expressions
+in an automatic or semiautomatic approach based on given knowlege in the graph. 
+Whereas the second method enrichs knowlege bases with different types of OWL2
+axioms.
+
+% - In this article: two methods for enrichment
+%   - creating class expression for ontology learning (automatic/ semiautomatic
+%   approach) 
+%   - enrichment with OWL2 axioms via SPARQL
+
 \end{abstract}
