--- a/Seminar-LinkedData/src/introduction.tex
+++ b/Seminar-LinkedData/src/introduction.tex
@@ -1,8 +1,10 @@
 \section{Introduction}
+% evtl: Semantic Web Stack
 
 - semantic web: growing, bigger knowledge graphs
 
 - Open data Initiative, Protoge ontologie etc
+-> hard to maintain, debug / find error inconsitencies
 
 - lack sophisticated schema (only schema no instances, only facts)
 
