--- a/Seminar-LinkedData/src/main.tex
+++ b/Seminar-LinkedData/src/main.tex
@@ -140,11 +140,47 @@ takesPartIn.Meeting$
 \section{Heuristics}
 % Paper 1
 \subsection{Finding the right Heuristic}
-- more
 
-- more
 
-- more
+\begin{table*}
+\centering
+\caption{Heuristics}
+\begin{tabular}{p{3.5 cm} p{3.5 cm} p{2 cm} p{2 cm} p{2 cm} p{2 cm}} \hline
+\textbf{Illustration} & \textbf{accuracy \& recall} & \textbf{pred. acc.} &
+\textbf{F-Measure} & \textbf{A-Measure} & \textbf{Jaccard}\\
+\hline\hline
+
+\raisebox{-.5\height}{\includegraphics[scale=0.3] {img/table-img1.png}}
+& 
+\begin{tabular}{l l}accuracy& 0\%\\\\ recall & 0\%\end{tabular}
+& 0 \% & 0 \% & 0 \% & 0 \% \\ \hline 
+
+\raisebox{-.5\height}{\includegraphics[scale=0.3] {img/table-img2.png}}
+&
+\begin{tabular}{l l}accuracy& 50\%\\\\ recall & 100\%\end{tabular}
+& 0 \% & 0 \% & 0 \% & 0 \% \\ \hline 
+
+\raisebox{-.5\height}{\includegraphics[scale=0.3] {img/table-img3.png}}
+& 
+\begin{tabular}{l l}accuracy& 16.7\%\\\\ recall & 100\%\end{tabular}
+& 0 \% & 0 \% & 0 \% & 0 \% \\ \hline 
+
+
+\raisebox{-.5\height}{\includegraphics[scale=0.3] {img/table-img4.png}}
+& 
+\begin{tabular}{l l}accuracy& 90\%\\\\ recall & 90\%\end{tabular}
+& 0 \% & 0 \% & 0 \% & 0 \% \\ \hline 
+
+\raisebox{-.5\height}{\includegraphics[scale=0.3] {img/table-img5.png}}
+& 
+\begin{tabular}{l l}accuracy& 50\%\\\\ recall & 100\%\end{tabular}
+& 0 \% & 0 \% & 0 \% & 0 \% \\ \hline 
+
+
+\end{tabular}
+\end{table*}
+
+
 \subsection{Efficient heuristic computation}
 - more
 
