pretty much the heuristic chapter

--- a/Seminar-LinkedData/document.tex
+++ b/Seminar-LinkedData/document.tex
@@ -2,6 +2,7 @@
 
 \usepackage{color}
 \usepackage{listings}
+\def\mymathhyphen{{\hbox{-}}}
 
 \definecolor{blue}{rgb}{0.25,0.35,1}
 \definecolor{green}{rgb}{0.15,0.8,0.15}
